// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my DataViewLanguagesMobile component data length <= 3 should renders properly  1`] = `
<div
  className="DataViewLanguagesMobile + left "
>
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
    >
      english
    </div>
    <div
      className="item"
      key="french"
    >
      french
    </div>
  </div>
</div>
`;

exports[`my DataViewLanguagesMobile component data length > 3 should renders properly  1`] = `
<div
  className="DataViewLanguagesMobile + left "
>
  <div
    className="info__title"
  >
    Languages
  </div>
  <div
    className="info__content"
  >
    <div
      className="item"
      key="english"
    >
      english
    </div>
    <div
      className="item"
      key="french"
    >
      french
    </div>
    <div
      className="item"
      key="german"
    >
      german
    </div>
    <div
      className="wrapper"
    >
      <SeeMore
        bottom="20%"
        data={
          Array [
            Object {
              "name": "polish",
            },
          ]
        }
        left=""
        right=""
        top=""
      />
    </div>
  </div>
</div>
`;
